# F5-TTS

./: Dockerfile  EchoForge_AI_Architecture_Audit.md  README.md  Temp.md  pyproject.toml  replit.md
.github/ISSUE_TEMPLATE/: bug_report.yml
attached_assets/: BaseModel_Switch_RaonOpenTTS1B_Prompt_1784361984451.md  Batch_Size_Safety_Fix_Prompt_1784354515111.md  EchoForge_Tokenizer_Update_Prompt_1784292502559.md  EchoForge_Vocab_Path_Fix_Prompt_1784343200425.md  Fix_Naming_And_DiT_Architecture_Prompt_1784399920581.md  Fix_infer_cli_Prompt_1784448999444.md  Remove_F5TTS_E2TTS_RaonOnly_Prompt_1784447797578.md  prompt_1784056123587.txt  prompt_1784116378723.txt
scripts/: find_stale_vocab.py
src/echoforge_tts/: api.py  socket_server.py
src/echoforge_tts/config/: __init__.py  paths.py
src/echoforge_tts/configs/: E2TTS_Base.yaml  E2TTS_Small.yaml  EchoForge_Base.yaml  EchoForge_Small.yaml  EchoForge_v1_Base.yaml  EchoForge_v1_Small.yaml  RaonOpenTTS_1B.yaml
src/echoforge_tts/eval/: README.md  eval_infer_batch.py  eval_infer_batch.sh  eval_infer_batch_example.sh  eval_librispeech_test_clean.py  eval_seedtts_testset.py  utils_eval.py
src/echoforge_tts/infer/: README.md  SHARED.md  infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
src/echoforge_tts/model/: __init__.py  cfm.py  dataset.py  modules.py  trainer.py  utils.py
src/echoforge_tts/model/backbones/: dit.py  mmdit.py  unett.py
src/echoforge_tts/scripts/: count_max_epoch_precise.py  count_params_gflops.py
src/echoforge_tts/train/: README.md  finetune_cli.py  finetune_gradio.py  train.py
(+13 files in other folders)
