[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echoforge-tts"
version = "1.1.21"
description = "EchoForge AI: Text-to-Speech engine"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0; platform_machine!='arm64' and platform_system!='Darwin'",
    "cached_path",
    "click",
    "datasets",
    "ema_pytorch>=0.5.2",
    "gradio>=6.15.0",
    "hydra-core>=1.3.0",
    "librosa",
    "matplotlib",
    "numpy<=1.26.4; python_version<='3.10'",
    "phonemizer>=3.2.2",
    "pydub",
    "safetensors",
    "soundfile",
    "tomli",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "unidecode",
    "vocos",
    "wandb",
    "x_transformers>=1.31.14",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "jiwer",
]

[project.urls]
Homepage = "TBD"

[project.scripts]
"echoforge_infer-cli" = "echoforge_tts.infer.infer_cli:main"
"echoforge_infer-gradio" = "echoforge_tts.infer.infer_gradio:main"
"echoforge_finetune-cli" = "echoforge_tts.train.finetune_cli:main"
"echoforge_finetune-gradio" = "echoforge_tts.train.finetune_gradio:main"
